--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ https://templatemo.com/tm-537-art-factory
                     <div class="left-text col-lg-6 col-md-6 col-sm-12 col-xs-12" data-scroll-reveal="enter left move 30px over 0.6s after 0.4s">
                         <h1>Helperz is made <strong>for ALL</strong></h1>
                         <p>This web based application is made for all people to help each others</p>
-                        <a href="#about" class="main-button-slider">Try it NOW</a>
+                        <a href="login/index.html" class="main-button-slider">Try it NOW</a>
                     </div>
                     <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12" data-scroll-reveal="enter right move 30px over 0.6s after 0.4s">
                         <img src="assets/images/slider-icon.png" class="rounded img-fluid d-block mx-auto" alt="First Vector Graphic">
